--- a/style.css
+++ b/style.css
@@ -43,7 +43,9 @@ body, input[text], button {
 .back {
   cursor: pointer;
 }
-
+.rowOfWords:hover {
+  background: #F2F2F2
+}
 /* 
  * See https://github.com/angular/angular.io/blob/master/public/docs/_examples/styles.css
  * for the full set of master styles used by the documentation samples
