Meaning to functional

--- a/app/meaning/word-mean.component.html
+++ b/app/meaning/word-mean.component.html
@@ -1,2 +1,7 @@
-<h1>The Meaning</h1>
-<div (click)="goBack()">Back</div>
+<div (click)="goBack()"
+	  class="back">
+	  Back
+</div>
+<h1>{{word.genius}}</h1>
+<hr>
+<p><i>{{word.quote}}</i></p>
