--- a/app/words-list.component.html
+++ b/app/words-list.component.html
@@ -1,4 +1,4 @@
-<h1 class="add"><a (click)="addWord()"> + </a></h1>
+<h1 class="add"><span (click)="addWord()"> + </span></h1>
 <h1>{{title}}</h1>
 <ul>
     <li *ngFor="#word of words" 
