New Quotes + style issue fix

--- a/app/meaning/word-mean.component.html
+++ b/app/meaning/word-mean.component.html
@@ -1,7 +1,9 @@
-<div (click)="goBack()"
+<nav class="meanNavPane">
+    <span (click)="goBack()"
 	  class="back">
 	  Back
-</div>
+	</span>  
+</nav>
 <h1>{{word.genius}}</h1>
 <hr>
 <p><i>{{word.quote}}</i></p>
