--- a/app/words-list.component.html
+++ b/app/words-list.component.html
@@ -5,7 +5,7 @@
         (click)="goWordMeaning(word)"
         class="rowOfWords">
         <p class="word"><i>{{word.quote}}</i></p>
-        <h4 class="genius">-- {{word.genius}}</h4>
+        <h4 class="genius">- {{word.genius}}</h4>
         <hr>
     </li>
 </ul>
